--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,14 @@
+appdirs==1.4.3
 certifi==2020.4.5.1
 chardet==3.0.4
+distlib==0.3.0
+et-xmlfile==1.0.1
+filelock==3.0.12
 idna==2.9
-requests==2.7.0
-urllib3==1.25.9
+jdcal==1.4.1
+openpyxl==3.0.3
 pyTelegramBotAPI==3.6.7
+requests==2.23.0
+six==1.14.0
+urllib3==1.25.9
+virtualenv==20.0.18
